[package]
name = "mljboard-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = "4.4.8"
env_logger = "0.10.1"
futures-channel = "0.3.29"
futures-util = "0.3.29"
log = "0.4.20"
reqwest = "0.11.22"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros", "rt", "rt-multi-thread", "io-std", "time"] }
tokio-tungstenite = "0.20.1"
tungstenite = { version = "0.20.1", features = ["native-tls"] }
url = "2.5.0"
